<resources>
    <string name="app_name">Mini Weather</string>

    <string name="weather_current_condition">Current Condition :</string>
    <string name="weather_temperature">Temperature :</string>
    <string name="weather_wind_speed">Wind Speed :</string>
    <string name="weather_wind_direction">Wind Direction :</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="weather_last_updated">Last updated %1$s, %2$s</string>
    <string name="weather_temperature_text">%1$d°C</string>
    <string name="weather_wind_speed_text">%1$dm/s</string>

    <string name="error_generic">Something went wrong, please try again</string>
    <string name="error_network_io">There was a network error, please ensure you are connected to the internet and try again</string>
    <string name="error_network_server">There was an error from the server, please try again</string>
    <string name="error_location_permission">Location permissions are required to fetch accurate weather data</string>
    <string name="error_location_timeout">There was a problem determining your location, please try again</string>

    <string name="description_refresh_button">refresh button</string>

    <string name="unknown">Unknown</string>

    <string-array name="directions">
        <item>North</item>
        <item>North East</item>
        <item>East</item>
        <item>South East</item>
        <item>South</item>
        <item>South West</item>
        <item>West</item>
        <item>North West</item>
        <item>North</item>
    </string-array>

</resources>
