<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/weather_condition_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_current_condition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weather_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/weather_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_condition_title" />

        <TextView
            android:id="@+id/weather_wind_speed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/weather_wind_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_temperature_title" />

        <TextView
            android:id="@+id/weather_wind_direction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/weather_wind_direction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_wind_speed_title" />

        <TextView
            android:id="@+id/weather_condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            app:layout_constraintStart_toEndOf="@id/weather_condition_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Windy" />

        <TextView
            android:id="@+id/weather_temperature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@id/weather_condition_text"
            app:layout_constraintTop_toBottomOf="@id/weather_condition_text"
            tools:text="1 C" />

        <TextView
            android:id="@+id/weather_wind_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@id/weather_temperature_text"
            app:layout_constraintTop_toBottomOf="@id/weather_temperature_text"
            tools:text="20m/s" />

        <TextView
            android:id="@+id/weather_wind_direction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@id/weather_wind_speed_text"
            app:layout_constraintTop_toBottomOf="@id/weather_wind_speed_text"
            tools:text="North East" />

        <TextView
            android:id="@+id/weather_last_updated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_wind_direction_title"
            tools:text="Last updated: 7:89 London, UK"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_reload_alert" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
